# A-Maze-ing

./: .gitignore  Makefile  Output_maze.txt  README.md  a-maze-ing.py  config.txt  maze.txt  mazegen-1.0.4-py3-none-any.whl  pyproject.toml  requirements.txt
mazegen/: __init__.py  app.py  main.py  mazegen.py  parser.py
src/: __init__.py  app.py  classes.py  main.py  mazegen.py  parser.py
