[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "flake8==7.3.0",
    "mccabe==0.7.0",
    "mypy==1.20.2",
    "mypy_extensions==1.1.0",
    "pathspec==1.1.1",
    "pycodestyle==2.14.0",
    "librt==0.9.0",
    "pydantic==2.13.3",
    "pydantic_core==2.46.3",
    "pyflakes==3.4.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
mazegen = "src.app:main"
