[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.4"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
mazegen = "src.main:main"
